--- a/packages/backend/src/assets/templates/notification.hbs
+++ b/packages/backend/src/assets/templates/notification.hbs
@@ -40,13 +40,22 @@
 <div class="message-content"
   style="font-family: Arial, Helvetica, sans-serif;max-width: 600px;font-size: 18px;line-height: 21px;background-color: #fff;color: #000;">
   <h1 class="title" style="width: 100%;text-align: center;padding: 15px 0px;font-size: 25px;background-color: #f1f1f1;">
-    Hello there!</h1>
-  <p class="last-view" style="width: 100%;text-align: center;margin: 10px 0px;">Your <span
-      style="font-weight: bold;">{{description}}</span> e-mail was just viewed by someone at </br><span
-      style="font-weight: bold;">{{viewerLocation}}</span></p>
-  <p class="views" style="width: 100%;text-align: center;margin: 10px 0px;">It currently has <span
-      style="font-weight: bold;">{{viewCount}}</span> views.</p>
-  <p class="notice"
-    style="width: 100%;text-align: center;margin: 10px 0px;font-size: 14px;color: #4d4d4d;padding: 10px 0px;background-color: #f1f1f1;">
-    We will keep you posted on future views.</p>
+    Hello there!
+  </h1>
+
+  <p class="last-view" style="width: 100%;text-align: center;margin: 10px 0px;">
+    Your <span style="font-weight: bold;">{{description}}</span> e-mail was just viewed by someone
+
+    {{#if viewerLocation}}
+      at </br><span style="font-weight: bold;">{{viewerLocation}}</span>
+    {{/if}}
+  </p>
+
+  <p class="views" style="width: 100%;text-align: center;margin: 10px 0px;">
+    It currently has <span style="font-weight: bold;">{{viewCount}}</span> views.
+  </p>
+
+  <p class="notice" style="width: 100%;text-align: center;margin: 10px 0px;font-size: 14px;color: #4d4d4d;padding: 10px 0px;background-color: #f1f1f1;">
+    We will keep you posted on future views.
+  </p>
 </div>
