--- a/packages/backend/src/views/templates/notification.hbs
+++ b/packages/backend/src/views/templates/notification.hbs
@@ -82,7 +82,7 @@
   style="width: 100%;font-family: Arial, Helvetica, sans-serif;font-size: 20px;line-height: 21px;margin: auto;background-color: #fff;">
   <header class="header" style="background-color: #157EFF;color: #fff;">
     <div class="header-content" style="max-width: 800px;margin: auto;padding-top: 40px;padding-bottom: 30px;">
-      <img class="icon" src="{{iconUrl}}/" style="display: inline-block;height: 25px;margin-right: 25px;float: left;">
+      <img class="icon" src="{{iconUrl}}" style="display: inline-block;height: 25px;margin-right: 25px;float: left;">
 
       <h1 class="title" style="display: inline-block;font-size: 25px;color: #fff;margin: 0;">
         Hello there!
