--- a/packages/backend/src/views/templates/notification.hbs
+++ b/packages/backend/src/views/templates/notification.hbs
@@ -108,7 +108,7 @@
     <p class="location"
       style="width: 100%;max-width: 800px;text-align: center;margin: 15px auto;color: #000;font-size: 12px;">
       {{#if viewerLocation}}
-      The viewer may be is located at or close to: <span style="font-weight: bold;">{{viewerLocation}}</span>
+      The viewer may be located at or close to: <span style="font-weight: bold;">{{viewerLocation}}</span>
       {{/if}}
     </p>
   </div>
