fix: Recipient line showing up on email when there's no recipient

--- a/packages/backend/src/views/templates/notification.hbs
+++ b/packages/backend/src/views/templates/notification.hbs
@@ -97,7 +97,9 @@
 
     <p class="recipient"
       style="width: 100%;max-width: 800px;text-align: center;margin: 15px auto;color: #000;font-size: 12px;">
+      {{#if recipient}}
       This someone could have been {{recipient}}
+      {{/if}}
     </p>
 
     <p class="views"
